--- a/notebooks/airquality/2_air_quality_feature_pipeline.ipynb
+++ b/notebooks/airquality/2_air_quality_feature_pipeline.ipynb
@@ -160,7 +160,7 @@
     "from pathlib import Path\n",
     "import json\n",
     "\n",
-    "project = hopsworks.login(project="Scalable_ML_DL_2026")\n",
+    "project = hopsworks.login()\n",
     "fs = project.get_feature_store() \n",
     "secrets = hopsworks.get_secrets_api()\n",
     "\n",
