Hyderabad multi-sensor pipelines, notebooks, and dashboards new changes

--- a/notebooks/airquality/2_air_quality_feature_pipeline.ipynb
+++ b/notebooks/airquality/2_air_quality_feature_pipeline.ipynb
@@ -121,7 +121,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 16,
    "id": "b70cd57d",
    "metadata": {
     "tags": []
@@ -131,10 +131,11 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "2025-11-18 23:47:43,700 INFO: Closing external client and cleaning up certificates.\n",
+      "2025-11-19 04:44:45,433 INFO: Closing external client and cleaning up certificates.\n",
+      "The history saving thread hit an unexpected error (OperationalError('attempt to write a readonly database')).History will not be written to the database.\n",
       "Connection closed.\n",
-      "2025-11-18 23:47:43,705 INFO: Initializing external client\n",
-      "2025-11-18 23:47:43,705 INFO: Base URL: https://c.app.hopsworks.ai:443\n"
+      "2025-11-19 04:44:45,441 INFO: Initializing external client\n",
+      "2025-11-19 04:44:45,442 INFO: Base URL: https://c.app.hopsworks.ai:443\n"
      ]
     },
     {
@@ -149,7 +150,7 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "2025-11-18 23:47:45,050 INFO: Python Engine initialized.\n",
+      "2025-11-19 04:44:46,718 INFO: Python Engine initialized.\n",
       "\n",
       "Logged in to project, explore it here https://c.app.hopsworks.ai:443/p/1301657\n"
      ]
@@ -160,7 +161,7 @@
     "from pathlib import Path\n",
     "import json\n",
     "\n",
-    "project = hopsworks.login()\n",
+    "project = hopsworks.login(project=\"Scalable_ML_DL_2026\")\n",
     "fs = project.get_feature_store() \n",
     "secrets = hopsworks.get_secrets_api()\n",
     "\n",
