--- a/notebooks/airquality/4_air_quality_batch_inference.ipynb
+++ b/notebooks/airquality/4_air_quality_batch_inference.ipynb
@@ -1989,7 +1989,7 @@
     "from xgboost import XGBRegressor\n",
     "\n",
     "# 1. Connect to Hopsworks + load metadata\n",
-    "project = hopsworks.login()\n",
+    "project = hopsworks.login(project=\"Scalable_ML_DL_2026\")\n",
     "fs = project.get_feature_store()\n",
     "mr = project.get_model_registry()\n",
     "\n",
