Throttle feature pipeline with per-sensor sleep

--- a/notebooks/airquality/2_air_quality_feature_pipeline.ipynb
+++ b/notebooks/airquality/2_air_quality_feature_pipeline.ipynb
@@ -1467,7 +1467,8 @@
     "        AQI_API_KEY=AQICN_API_KEY,\n",
     "    )\n",
     "    air_quality_fg = fs.get_feature_group(name=sensor[\"feature_group_name\"], version=1)\n",
-    "    air_quality_fg.insert(aq_today_df)\n"
+    "    air_quality_fg.insert(aq_today_df)\n",
+    "    time.sleep(10)\n"
    ]
   },
   {
